deployment_vote-bot.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: vote-bot
    app.kubernetes.io/part-of: emojivoto
    app.kubernetes.io/version: v11
  name: vote-bot
  namespace: emojivoto
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vote-bot
      version: v11
  template:
    metadata:
      labels:
        app: vote-bot
        version: v11
    spec:
      containers:
        - command:
            - emojivoto-vote-bot
          image: docker.l5d.io/buoyantio/emojivoto-web:v11
          name: vote-bot
          resources:
            requests:
              cpu: 10m
