service_emoji-svc.yml
---
apiVersion: v1
kind: Service
metadata:
  name: emoji-svc
  namespace: emojivoto
spec:
  ports:
    - name: grpc
      port: 8080
      targetPort: 8080
    - name: prom
      port: 8801
      targetPort: 8801
  selector:
    app: emoji-svc
