ingress_emojivoto.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: emojivoto
  labels:
    name: emojivoto
spec:
  rules:
  - host: ${emojivoto_host}
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: web-svc
            port: 
              number: 80
